[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/house.png" type="Texture" id=1]
[ext_resource path="res://Sprites/gold.png" type="Texture" id=2]
[ext_resource path="res://Sprites/stone.png" type="Texture" id=3]
[ext_resource path="res://Sprites/water.png" type="Texture" id=4]
[ext_resource path="res://Sprites/wood.png" type="Texture" id=5]
[ext_resource path="res://Sprites/metal.png" type="Texture" id=6]
[ext_resource path="res://Sprites/food.png" type="Texture" id=7]
[ext_resource path="res://UI/HUDTheme.tres" type="Theme" id=8]
[ext_resource path="res://Sprites/well.png" type="Texture" id=9]
[ext_resource path="res://Sprites/woodchop.png" type="Texture" id=10]
[ext_resource path="res://Sprites/huntingShanty.png" type="Texture" id=11]
[ext_resource path="res://Sprites/fishingBoat.png" type="Texture" id=12]
[ext_resource path="res://Sprites/blacksmith.png" type="Texture" id=13]
[ext_resource path="res://Sprites/mine.png" type="Texture" id=14]
[ext_resource path="res://Sprites/shop.png" type="Texture" id=15]
[ext_resource path="res://UI/HUD.gd" type="Script" id=16]
[ext_resource path="res://UI/ButtonPanel.gd" type="Script" id=17]
[ext_resource path="res://UI/MouseCursor.tscn" type="PackedScene" id=18]
[ext_resource path="res://UI/InputController.gd" type="Script" id=19]
[ext_resource path="res://UI/ResourcesPanel.gd" type="Script" id=20]
[ext_resource path="res://Game/PlayerResources.gd" type="Script" id=21]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )
script = ExtResource( 16 )

[node name="ButtonPanel" type="Panel" parent="."]
margin_left = 160.0
margin_top = 270.0
margin_right = 320.0
margin_bottom = 290.0
rect_min_size = Vector2( 160, 20 )
theme = ExtResource( 8 )
script = ExtResource( 17 )

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 158.0
margin_bottom = 18.0
theme = ExtResource( 8 )

[node name="WellButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
hint_tooltip = "Well"
theme = ExtResource( 8 )
icon = ExtResource( 9 )

[node name="HunterButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
hint_tooltip = "Hunter's Shanty"
theme = ExtResource( 8 )
icon = ExtResource( 11 )

[node name="FisherButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
hint_tooltip = "Fishing Boat"
theme = ExtResource( 8 )
icon = ExtResource( 12 )

[node name="HouseButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
hint_tooltip = "House"
theme = ExtResource( 8 )
icon = ExtResource( 1 )

[node name="WoodchopButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0
hint_tooltip = "Wood Splitter's Pile"
theme = ExtResource( 8 )
icon = ExtResource( 10 )

[node name="MineButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 16.0
hint_tooltip = "Mine"
theme = ExtResource( 8 )
icon = ExtResource( 14 )

[node name="BlacksmithButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 120.0
margin_right = 136.0
margin_bottom = 16.0
hint_tooltip = "Blacksmith"
theme = ExtResource( 8 )
icon = ExtResource( 13 )

[node name="ShopButton" type="Button" parent="ButtonPanel/HBoxContainer"]
margin_left = 140.0
margin_right = 156.0
margin_bottom = 16.0
hint_tooltip = "Shop"
theme = ExtResource( 8 )
icon = ExtResource( 15 )

[node name="ResourcesPanel" type="Panel" parent="."]
margin_right = 48.0
margin_bottom = 88.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 8 )
script = ExtResource( 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="ResourcesPanel"]
margin_left = 4.0
margin_top = 3.0
margin_right = 46.0
margin_bottom = 85.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ResourceTextures" type="VBoxContainer" parent="ResourcesPanel/HBoxContainer"]
margin_right = 8.0
margin_bottom = 82.0
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 6

[node name="water" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_right = 8.0
margin_bottom = 8.0
hint_tooltip = "Water"
theme = ExtResource( 8 )
texture = ExtResource( 4 )

[node name="food" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 14.0
margin_right = 8.0
margin_bottom = 22.0
hint_tooltip = "Food"
theme = ExtResource( 8 )
texture = ExtResource( 7 )

[node name="wood" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 28.0
margin_right = 8.0
margin_bottom = 36.0
hint_tooltip = "Wood"
theme = ExtResource( 8 )
texture = ExtResource( 5 )

[node name="stone" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 42.0
margin_right = 8.0
margin_bottom = 50.0
hint_tooltip = "Stone"
theme = ExtResource( 8 )
texture = ExtResource( 3 )

[node name="metal" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 56.0
margin_right = 8.0
margin_bottom = 64.0
hint_tooltip = "Metal"
theme = ExtResource( 8 )
texture = ExtResource( 6 )

[node name="gold" type="TextureRect" parent="ResourcesPanel/HBoxContainer/ResourceTextures"]
margin_top = 70.0
margin_right = 8.0
margin_bottom = 78.0
hint_tooltip = "Gold"
theme = ExtResource( 8 )
texture = ExtResource( 2 )

[node name="AmountLabels" type="VBoxContainer" parent="ResourcesPanel/HBoxContainer"]
margin_left = 12.0
margin_right = 22.0
margin_bottom = 82.0

[node name="WaterLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_right = 10.0
margin_bottom = 10.0
theme = ExtResource( 8 )
text = "0"

[node name="FoodLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 14.0
margin_right = 10.0
margin_bottom = 24.0
theme = ExtResource( 8 )
text = "0"

[node name="WoodLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 28.0
margin_right = 10.0
margin_bottom = 38.0
theme = ExtResource( 8 )
text = "0"

[node name="StoneLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 42.0
margin_right = 10.0
margin_bottom = 52.0
theme = ExtResource( 8 )
text = "0"

[node name="MetalLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 56.0
margin_right = 10.0
margin_bottom = 66.0
theme = ExtResource( 8 )
text = "0"

[node name="GoldLabel" type="Label" parent="ResourcesPanel/HBoxContainer/AmountLabels"]
margin_top = 70.0
margin_right = 10.0
margin_bottom = 80.0
theme = ExtResource( 8 )
text = "0"

[node name="MouseCursor" parent="." instance=ExtResource( 18 )]

[node name="InputController" type="Node" parent="."]
script = ExtResource( 19 )

[node name="PlayerResources" type="Node" parent="."]
script = ExtResource( 21 )

[connection signal="button_down" from="ButtonPanel/HBoxContainer/WellButton" to="." method="_on_WellButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/HunterButton" to="." method="_on_HunterButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/FisherButton" to="." method="_on_FisherButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/HouseButton" to="." method="_on_HouseButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/WoodchopButton" to="." method="_on_WoodButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/MineButton" to="." method="_on_MineButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/BlacksmithButton" to="." method="_on_BlacksmithButton_button_down"]
[connection signal="button_down" from="ButtonPanel/HBoxContainer/ShopButton" to="." method="_on_ShopButton_button_down"]
